fix mobile overflow

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -207,6 +207,11 @@ strong {
 }
 
 .logo {
+    display: none;
+}
+
+.logo-mobile {
+    display: block;
     height: 64px;
     line-height: 64px;
     font-size: 20px;
@@ -275,6 +280,7 @@ strong {
     align-items: center;
     font-weight: 700;
     font-size: 96px;
+    color: var(--color-accent);
 }
 
 .project {
@@ -389,7 +395,7 @@ strong {
     top: 0;
     left: 0;
     width: 100%;
-    height: 128px; /* puoi modificare l'altezza come desideri */
+    height: 256px; /* puoi modificare l'altezza come desideri */
     background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     z-index: 499; /* Così appare sotto la top-bar */
     opacity: 0; /* inizialmente trasparente */
@@ -467,6 +473,7 @@ strong {
     }
 
     .logo {
+        display: block;
         height: 64px;
         line-height: 64px;
         font-size: 20px;
